[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramid-detector"
version = "2.0.0"
description = "Automatically detect pyramids in Terraria worlds"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Pyramid Detector Contributors"},
]
keywords = ["terraria", "pyramid", "world-generation", "game-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "lihzahrd>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyramid-detector"
Documentation = "https://github.com/yourusername/pyramid-detector/blob/main/README.md"
Repository = "https://github.com/yourusername/pyramid-detector"
"Bug Tracker" = "https://github.com/yourusername/pyramid-detector/issues"

[project.scripts]
pyramid-detector = "pyramid_detector.cli.main:cli"
pyramid-gui = "pyramid_detector.gui.app:main"

[tool.setuptools]
packages = ["pyramid_detector", "pyramid_detector.core", "pyramid_detector.platform", "pyramid_detector.cli", "pyramid_detector.gui"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
