[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyramid-toolkit"
version = "1.0.0"
description = "Automatically detect pyramids in Terraria worlds"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Pyramid Toolkit Contributors"},
]
keywords = ["terraria", "pyramid", "world-generation", "game-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "lihzahrd>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyramid-toolkit"
Documentation = "https://github.com/yourusername/pyramid-toolkit/blob/main/README.md"
Repository = "https://github.com/yourusername/pyramid-toolkit"
"Bug Tracker" = "https://github.com/yourusername/pyramid-toolkit/issues"

[project.scripts]
pyramid-toolkit = "pyramid_toolkit.cli.main:cli"
pyramid-gui = "pyramid_toolkit.gui.app:main"

[tool.setuptools]
packages = ["pyramid_toolkit", "pyramid_toolkit.core", "pyramid_toolkit.platform", "pyramid_toolkit.cli", "pyramid_toolkit.gui"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
